Refactor the use case to create a new model and implemented the use case to retrieve one model
